linuxmuster-linbo (2.4.2-4) lmn7; urgency=low

  * unifying bootsplash and grub menu background.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 02 Feb 2021 21:10:10 +0100

linuxmuster-linbo (2.4.2-3) lmn7; urgency=low

  * bootsplash cosmetics.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 01 Feb 2021 17:27:35 +0100

linuxmuster-linbo (2.4.2-2) lmn7; urgency=low

  * fix #165: linbo_cmd function to list all images in cache.
  * fix #161: Explicit start.conf parameter for "linbo-remote mode".
  * improved behaviour of some linbo-remote options.
  * updated start.conf examples.
  * changed plymouth default color.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 31 Jan 2021 19:38:26 +0100

linuxmuster-linbo (2.4.2-1) lmn7; urgency=low

  * take over ubuntu's kernel framebuffer configuration (fixes hopefully
    #169).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 31 Jan 2021 16:26:46 +0100

linuxmuster-linbo (2.4.2-0) lmn7; urgency=low

  * fix #163: Linbo manipulates start.conf.
  * implemented codename.
  * fix #164: implemented plymouth boot splash (for 64bit versions only).
  * fix linbo_wallpaper handling due to plymouth stuff (#164).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 27 Jan 2021 14:45:18 +0100

linuxmuster-linbo (2.4.1-0) lmn7; urgency=low

  * linbo_cmd, register(): implemented device role (see https://github.com/linuxmuster/linuxmuster-linbo-gui/issues/7).
  * fix #155: linbo_cmd, added functions netmask and bitmask.
  * fix #157: offline boot on efi systems boots last booted os.
  * fix #158: Gui is not loaded from cache in offline mode.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 11 Dec 2020 17:56:57 +0100

linuxmuster-linbo (2.4.0-0) lmn7; urgency=low

  * fix #147: implemented logging image status of client.
  * more english translations of console messages and further code beautifying.
  * fix #141: linbo manipulating the local start.conf when finding labels with same name.